# bunun-mazen-pharmacy

./: .gitignore  README.md  index.html  medicines_template.csv  package-lock.json  package.json  styles.css  tailwind.config.js
.github/workflows/: ci.yml
docs/: API.md  BACKUP_RESTORE.md  DEPLOYMENT.md  SECURITY.md
e2e/: mocks.ts  pos.spec.ts
scripts/: pre-release-check.sh
src/: App.tsx  ErrorBoundary.tsx  MainDashboard.tsx  styles.css
src-tauri/: Cargo.toml  mobile_scanner_page.html  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/keys/: manifest.json
src-tauri/migrations/: 0001_initial_schema.sql  0002_seed_data.sql  0005_fix_schema.sql  0006_drug_interactions_supplier_orders.sql  0007_test_data.sql  0008_drug_interactions_1000.sql  0009_reset_data.sql  0010_discount_iqd_profile.sql  0011_mobile_scanner.sql  0012_auto_generate_barcodes.sql  0013_real_barcode_medicines.sql  0014_missing_tables.sql  0015_fixes.sql  0016_idempotency_and_extras.sql  0017_refund_columns_and_checks.sql  0018_real_session_tokens.sql  0019_security_hardening.sql  0020_seed_permissions.sql  0021_unify_shifts_schema.sql  0022_materialized_views.sql  0023_fix_discount_limit.sql  0024_remove_default_credentials.sql  0025_cleanup_fake_batches.sql  0026_add_login_at_column.sql  0027_grant_role_permissions.sql  0028_add_absolute_session_expiry.sql  0029_session_cleanup.sql  0030_add_check_constraints.sql  0031_audit_log_triggers.sql  0032_fix_mat_views.sql  0033_add_batch_id_to_invoice_items.sql  0034_add_missing_indexes.sql  0035_neutralize_destructive_migration.sql  0036_add_fk_unique_constraints.sql  0037_inventory_reconciliation.sql  0038_ledger_verification.sql  20240101000000_init.sql  20240102000000_enterprise_enhancements.sql  20240103000000_pharmiq_intelligence.sql  20240104000000_pharmiq_complete.sql  (+15 more)
src-tauri/scripts/: reset_database.sql
src-tauri/src/: backend_extensions.rs  errors.rs  invoices_commands.rs  main.rs  pharmiq_commands.rs  pharmiq_complete.rs  pharmiq_enterprise_complete.rs  pharmiq_features.rs  pharmiq_new_features.rs  sale_logic.rs  smart_barcode_commands.rs  validation.rs
src-tauri/src/licensing/: keyring.rs  legacy.rs  mod.rs  verifier.rs
src-tauri/src/mobile_scanner/: barcode_parser.rs  mod.rs  pairing.rs  rate_limiter.rs  scanner_events.rs  websocket_server.rs
src-tauri/src/modules/: pharmiq_complete.rs
src-tauri/tests/: integration_tests.rs
src/components/ui/: StatCard.tsx
src/domains/accounting/: AccountingDashboard.tsx  DebtsDashboard.tsx  accounting.store.ts  debts.store.ts
src/domains/intelligence/: BarcodeIntelligenceDashboard.tsx  CashDrawerDashboard.tsx  DailyChecksModal.tsx  DrugIntelligenceDashboard.tsx  EnterpriseDashboard.tsx  ImportDashboard.tsx  IntelligenceAnalyticsDashboard.tsx  LabelPrintingDashboard.tsx  ParentDrugGroupsDashboard.tsx  PrescriptionsDashboard.tsx  StockCountDashboard.tsx
src/domains/inventory/: BulkBarcodeEntry.tsx  InventoryDashboard.tsx  inventory.store.ts
src/domains/mobile-scanner/: index.ts
src/domains/patients/: PatientsDashboard.tsx
src/domains/pos/: DrugInteractionChecker.tsx  PaymentModal.tsx  Receipt.tsx  RefundDashboard.tsx  SmartBarcodeLookup.tsx  TouchKeypad.tsx  pos.store.ts
src/domains/reporting/: InvoicesDashboard.tsx  ReportingDashboard.tsx
src/domains/security/: AuditDashboard.tsx  Login.tsx  auth.store.ts
src/plugins/: aiInsights.tsx  cloudSync.tsx  index.ts  whatsapp.tsx
src/types/: index.ts
tests/stress/: performance.spec.ts
(+38 files in other folders)
